refact: 채널 태그 관계로 리팩토링(#83)